<resources>
    <string name="app_name">Activity</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="account">Уже есть аккуант?</string>
    <string name="tracker">Пожалуй, лучший фитнес-трекер в ДВФУ</string>
    <string name="reg">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя или никнейм</string>
    <string name="agreement">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение.</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="login_title">Вход</string>
    <string name="login_button">Продолжить</string>
    <string name="title_activity">Активность</string>
    <string name="title_profile">Профиль</string>
    <string name="workout">Время потренить</string>
    <string name="track">Нажимай на кнопку ниже и начинаем трекать активность</string>
    <string name="my">Моя</string>
    <string name="users">Пользователей</string>
    <string name="start">Начать</string>
    <string name="walk">Ходьба</string>
    <string name="bike">Велосипед</string>
    <string name="begin">Начать</string>
    <string name="run">Бег</string>
    <string name="distance">Дистанция: 0 км</string>
    <string name="time">Время: 00:00:00</string>
    <string name="end">Завершить</string>
    <string name="go">Погнали? :)</string>
    <string name="active">Выбранная активность</string>
    <string name="yesterday">Вчера</string>
    <string name="surfing">Серфинг</string>
    <string name="ago">14 часов назад</string>
    <string name="swing">Качели</string>
    <string name="distance1">14.32 км</string>
    <string name="time1">2 часа 46 минут</string>
    <string name="mail1">\@van_darkholme</string>
    <string name="distance2">228 м</string>
    <string name="time2">14 часов 48 минут</string>
    <string name="mail2">\@techniquepasha</string>
    <string name="distance3">10 км</string>
    <string name="time3">1 час 10 минут</string>
    <string name="mail3">\@morgen_shtern</string>
    <string name="nickname">Имя или никнейм</string>
    <string name="exit">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="accept">Принять</string>


</resources>
