<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/vectorIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracker"
        android:textSize="16sp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/registration"
        android:textColor="#FFFFFF"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/account"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>